# rust-cli-time

./: Cargo.toml  README.md
src/: client.rs  server.rs
